Fix background and sticky header not reaching bottom on small vertical

--- a/vscode/webviews/App.module.css
+++ b/vscode/webviews/App.module.css
@@ -1,7 +1,6 @@
 .outer-container {
     background-color: var(--vscode-sideBar-background);
     display: flex;
-    height: 100%;
     flex-direction: column;
     box-sizing: border-box;
 }
